# viz_utils

./: README.md  requirements.txt  setup.cfg
assets/: allegro_hand_description_left.urdf  ycb_relocation_temp.xml
sapien_viz/: object_property.py  robot_property.py  viz_hand_object.py  viz_human_hand.py  viz_robot.py  viz_urdf.py
sapien_viz/assets/: adroit_hand.urdf  adroit_hand_free.urdf
sapien_viz/mano/: lbs.py  model.py  sapien_mano.py  utils.py
sapien_viz/utils/: point_cloud_utils.py
test_assets/: 142517.pkl  142853.pkl  obj_id_37.pkl
visualization/: robot_property.py  viz_robot.py
visualization/assets/: allegro_hand_description_right.urdf
