[metadata]
name = viz_utils
home-page = https://github.com/yzqin/viz_utils
license = MIT
author = SAPIEN-User
author-email = y1qin@ucsd.edu
summary = Cross-distribution Linux wheels
description-file = README.md
long_description_content_type = README.md
python_requires = >=3.6
classifier =
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3 :: Only
        Topic :: Software Development
        Topic :: Software Development :: Build Tools
        Topic :: Software Development :: Libraries :: Python Modules

[pbr]
skip_changelog = 1
skip_authors = 1

[files]
packages = visualization

[entry_points]
console_scripts =
    viz_robot = visualization.viz_robot:main
